@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * @author Where.LIU
@@ -50,7 +51,7 @@ public class PermissionService {
     public List<PermissionEntity> listByPid(Long pid) {
         return permissionDao.listByPid(pid).stream()
                 .map(permissionConverter::of)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
